HTBHF-926 Add voucher entitlement to claim response
